# DS_Robetarme

./: .gitignore  CMakeLists.txt  Rui_README_UR5.txt  package.xml
cfg/: lagsDS_params.cfg
config/coupled_DS/: circle_ori_control_test_ori.yml
docker_kinetic/: Dockerfile  build_docker.sh  start_docker.sh
docker_planner/: Dockerfile  build_docker.sh  start_docker.sh
ds_motion_robetarme/: README.md
ds_motion_robetarme/config/coupled_DS/: circle_ori_control_test_ori.yml  linear.yml
ds_motion_robetarme/config/learned_DS/lagsDS/: 2023-05-23-snake-shape.yml
ds_motion_robetarme/include/coupled_DS/: coupledDS.h
ds_motion_robetarme/launch/: load_coupledDS.launch  load_linearDS.launch
ds_motion_robetarme/src/: linearDS_node.cpp
ds_motion_robetarme/src/coupled_DS/: coupledDS.cpp
include/coupled_DS/: coupledDS.h  linearDS.h
launch/: load_linearDS.launch
src/: coupledDS_node.cpp
src/DS_modulation/: robot_avoidance.py
src/boustrophedon_planner/boustrophedon_server/launch/: boustrophedon_server.launch
src/coupled_DS/: linearDS.cpp
src/ds_motion_robetarme/: CMakeLists.txt
src/ds_motion_robetarme/config/coupled_DS/: circle_ori_control_test_ori.yml
src/ds_motion_robetarme/launch/: load_coupledDS.launch  load_linearDS.launch
src/ds_motion_robetarme/src/: linearDS_node.cpp
src/ds_motion_robetarme/src/coupled_DS/: coupledDS.cpp
src/motion_planner/: CMakeLists.txt  package.xml
src/motion_planner/config/: config.yaml
src/motion_planner/include/: library_planner.h
src/motion_planner/launch/: path_planning.launch
src/motion_planner/src/: gaussian_depth_map.py  library_planner.cpp  motion_planner_node.cpp  motion_planner_node_copy.cpp
src/test_boustrophedon_with_robot/config/: congifRviz.rviz
src/test_boustrophedon_with_robot/launch/: load_test_code.launch  path_planning.launch  path_planning_wo_server.launch
src/test_boustrophedon_with_robot/src/: exrtac_path.cpp  extract_path.py  plot_path.py  test_boustrophedon_node.cpp
